# maze-game

./: 1.h  1.txt  CMakeLists.txt  log.txt  main.cpp  maze.cpp  maze_game.h  player.cpp  timer.cpp  utils.cpp
maze_project-main/: CMakeLists.txt  main.cpp  maze.cpp  maze.h  player.cpp  player.h  readme.md
